style.css
body {
    font-family: Roboto, Arial, sans-serif;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #1F2937;
}

.header,
.body-hero,
.body-info,
.body-quote,
.body-action {
    padding: 0 200px;
}

/* header */
.header {
    background-color: #1F2937;
    padding: 16px 200px; /* change to flex-grow */
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.header-logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

/* section 1 */
.body-hero {
    background-color: #1F2937;
    padding-top: 100px;
    padding-bottom: 100px;
    display: flex;
    gap: 50px;
}

.texts {
    flex: 3;
    flex-direction: column;
    gap: 5px;
}

.hero-main {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

.hero-second {
    font-size: 18px;
    color: #E5E7EB;
}

button {
    padding: 8px 32px;
    border-radius: 7px;
    font-weight: bold;
    font-size: 18px;
}

.body-hero button {
    border: none;
    background-color: #3882F6;
    color: #F9FAF8;
    margin-top: 10px;
}

.big-image {
    flex: 4;
    text-align: end;
    display: flex;
}

.big-image img {
    height: 230px;
    width: auto;
    flex: 1;
}

ul {
    display: flex;
    list-style-type: none;
    gap: 20px;
    font-size: 18px;
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #E5E7EB;
}

/* body info */

.body-info {
    padding-bottom: 75px;
    background-color: white;
}

.info-header {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    padding: 24px 0;
    text-align: center;
    padding: 35px 0;
}

.small-images {
    display: flex;
    justify-content: center;
    gap: 50px;
}

.container {
    text-align: center;
    max-width: min-content;
}

.small-images img {
    border: 4px solid #3882F6;
    border-radius: 10px;
    height: 200px;
    width: auto;
}

.container div {
    font-size: 18px;
    color: #1F2937;
    margin-top: 5px;
}

/* body quote */

.body-quote {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    padding: 100px 360px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1F2937;
}

.author {
    font-weight: bold;
    align-self: end;
}

/* body-action */

.body-action {
    padding: 75px 200px;
    background-color: white;
}

.cover {
    background-color: #3882F6;
    border-radius: 5px;
    padding: 50px 150px;
    display: flex;
    justify-content: space-between;
}

.action-text {
    font-size: 24px;;
    font-weight: bold;
    color: #F9FAF8;
}

.cover button {
    background-color: inherit;
    color: #F9FAF8;
    border: 2px solid #F9FAF8;
}

.footer {
    padding: 30px 0;
    background-color: #1F2937;
    text-align: center;
}

